# sansodhan_charcha

./: .gitignore  README.md  pyproject.toml
examples/: chroma_singleton_example.py  eg.json  nepali_rag_example.py
experiments /: adv_py_examples.py  embeddings_nepali.py
src/adapter/: rpc_client.py
src/endpoint/: rpc_server.py
src/entities/: response_model.py
src/repo/: chroma_client.py
src/sansodhan_rag/: rag_base.py  rag_main.py
src/services/: rag_base.py  rag_main.py
src/utils/: logger.py  query_response.py  settings.py
